2005-10-25  David Schleef  <ds@schleef.org>

	* libswfdec/swfdec_cache.c: New code to help with caching data.
	* libswfdec/swfdec_cache.h:
	* libswfdec/swfdec_internal.h:
	* libswfdec/Makefile.am:
	* libswfdec/swf.c:
	* libswfdec/swfdec_decoder.h:

	* libswfdec/swfdec_image.c: Use cache/handles in image decoding.
	* libswfdec/swfdec_image.h:
	* libswfdec/swfdec_render_cairo.c:
	* libswfdec/swfdec_shape.c:
	* libswfdec/swfdec_types.h:

2005-10-23  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:  Move almost all tag parsing code into
	  swfdec_tag.c
	* libswfdec/actions.c:
	* libswfdec/actions_builtin.c:
	* libswfdec/color.c:
	* libswfdec/swf.c:
	* libswfdec/swfdec_button.c:
	* libswfdec/swfdec_display.c:
	* libswfdec/swfdec_display.h:
	* libswfdec/swfdec_font.c:
	* libswfdec/swfdec_internal.h:
	* libswfdec/swfdec_render.c:
	* libswfdec/swfdec_shape.c:
	* libswfdec/swfdec_sprite.c:
	* libswfdec/swfdec_sprite.h:
	* libswfdec/swfdec_tag.c:
	* libswfdec/swfdec_text.c:

2005-10-19  David Schleef  <ds@schleef.org>

	* libswfdec/actions_builtin.c: (mc_attachMovie): Change sprite
	  data structure so that each frame has a struct that contains
	  information about the frame, including layers and sprite
	  segments to display.
	* libswfdec/render.c: (tag_place_object_2), (tag_remove_object),
	(tag_remove_object_2), (tag_show_frame):
	* libswfdec/swf.c: (swf_parse_header2):
	* libswfdec/swfdec_render.c: (swfdec_render_get_image),
	(swfdec_render_get_audio):
	* libswfdec/swfdec_sound.c: (tag_func_start_sound):
	* libswfdec/swfdec_sprite.c: (swfdec_sprite_dispose),
	(swfdec_sprite_add_sound_chunk), (swfdec_sprite_add_action),
	(swfdec_sprite_render_iterate), (swfdec_sprite_render),
	(tag_func_define_sprite), (swfdec_sprite_get_seg),
	(swfdec_sprite_frame_add_seg), (swfdec_sprite_frame_remove_seg),
	(swfdec_spriteseg_place_object_2),
	(swfdec_spriteseg_remove_object),
	(swfdec_spriteseg_remove_object_2):
	* libswfdec/swfdec_sprite.h:
	* libswfdec/swfdec_types.h:
